# pudding

./: AGENTS.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
.kiro/specs/pudding/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/pudding-v2/: tasks.md
.kiro/steering/: product.md
crates/pudding/: Cargo.toml
crates/pudding/src/: action.rs  cli.rs  config.rs  editor.rs  keybind.rs  layout.rs  main.rs  model.rs  paths.rs  runtime.rs  runtime_centered_rect.rs  runtime_key_to_bytes.rs  runtime_main_area.rs  runtime_terminal_size.rs  template.rs  zellij.rs
crates/pudding/src/editor/: editor_area.rs  editor_draw.rs  editor_input.rs  editor_keys.rs
crates/pudding/src/layout/: geometry.rs  manipulation.rs  navigation.rs  search.rs
crates/pudding/src/runtime/: actions.rs  pane_process.rs  prompt.rs
crates/pudding/src/template/: io.rs  validation.rs
